fix highlight yellow on mobile devices

--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -89,10 +89,6 @@
       background-color: orange;
       display: inline-block;
       color: white;
-
-      @media (max-width: 767px) {
-        width: 100%;
-      }
     }
   }
 
